--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./
-      - with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
