--- a/action.yml
+++ b/action.yml
@@ -10,14 +10,18 @@ inputs:
     required: true
     description: "The regex where the match is the build version name. Eg. 3.36.1"
     default: "projectsAppVersionName = \"(.*)\""
-  fromColumn:
+  hasPRColumn:
     required: true
-    description: "The column that the task should be moved from."
+    description: "The has PR column id"
     default: "169406"
-  toColumn:
+  mergedColumn:
     required: true
-    description: "The column that tasks will be moved to"
+    description: "The merged column id"
     default: "178833"
+  approvedColumn:
+    required: true
+    description: "The approved column id"
+    default: "178834"
   chatChannelId:
     required: true
     description: "The chat channel id to use for errors and warnings"
