--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,7 @@
 name: 'build'
-if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+on: # rebuild any PRs and main branch changes
+  pull_request:
+    types: [closed]
 
 jobs:
   # build: # make sure build/ci work properly
@@ -17,6 +19,7 @@ jobs:
   #     - uses: actions/checkout@v2
   #     - uses: ./
   run: # make sure the action works on a clean machine without building
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
