--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,6 +1,6 @@
 name: 'On Merge'
 on: # rebuild any PRs and main branch changes
-  workflow-dispatch:
+  workflow_dispatch:
   # pull_request:
   #   types: [closed]
 
