--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,6 +1,5 @@
 name: 'On Merge'
-on: # rebuild any PRs and main branch changes
-  workflow_dispatch:
+on: workflow_dispatch
   # pull_request:
   #   types: [closed]
 
