--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,13 +1,15 @@
-name: 'On Merge'
+name: 'Sample'
 on: workflow_dispatch
+
+# on:
   # pull_request:
   #   types: [closed]
 
-jobs:
-  run: # make sure the action works on a clean machine without building
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    permissions: write-all
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./
+# jobs:
+#   run: # make sure the action works on a clean machine without building
+#     if: github.event.pull_request.merged == true
+#     runs-on: ubuntu-latest
+#     permissions: write-all
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: ./
