--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,15 +1,13 @@
-name: 'Sample'
-on: workflow_dispatch
+name: 'Webhook on Merge'
+on:
+  pull_request:
+    types: [closed]
 
-# on:
-  # pull_request:
-  #   types: [closed]
-
-# jobs:
-#   run: # make sure the action works on a clean machine without building
-#     if: github.event.pull_request.merged == true
-#     runs-on: ubuntu-latest
-#     permissions: write-all
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: ./
+jobs:
+  run: # make sure the action works on a clean machine without building
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    permissions: write-all
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./
