--- a/sample.yml
+++ b/sample.yml
@@ -7,7 +7,6 @@ jobs:
   run: # make sure the action works on a clean machine without building
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
-      - uses: actions/checkout@v2
+      - uses: Teamwork/mobile-versioning-action
       - uses: ./
